# opendaq-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build-native-binaries.yml  release.yml  test.yml
examples/: add_function_block.rs  batch_properties.rs  call_function_property.rs  component_tree.rs  connect_view_only_client.rs  core_events.rs  create_signal.rs  device_lock_and_operation_mode.rs  download_log_files.rs  multireader.rs  reader_invalidation_recovery.rs  reading_incompatible_signals_together.rs  search_filter.rs  smoke.rs  stateful_callback.rs  streamreader.rs  streamreader_2d_signal.rs  streamreader_with_timestamps.rs
src/: callables.rs  callbacks.rs  data.rs  error.rs  events.rs  instance.rs  lib.rs  loader.rs  marshal.rs  native_manifest.rs  object.rs  properties.rs  readers.rs  time.rs  value.rs
src/sys/: generated.rs  mod.rs
tests/: hl_coreobjects.rs  hl_coretypes.rs  hl_runtime.rs  hl_smoke.rs  ll_core.rs
tests/common/: mod.rs
tools/: generate_bindings.py  parse_bindings.py
